tests/spec/compile-fail/014_shared_array_slice.zn
// category: compile-fail
// profile: freestanding
// purpose: ArraySlice cannot be stored in Shared

module tests.fail.sharedArraySlice;

import core.alloc.{AllocError, GlobalAllocator};
import core.result.{Result, Ok};

fn bad(bytes: ArraySlice<U8>, mut allocator: GlobalAllocator) -> Result<Unit, AllocError> {
    let shared = Shared.newIn(move bytes, mut allocator); // expected-error: ArraySlice cannot be stored in Shared
    let ignoredShared = move shared;
    return Ok(());
}
